--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ security.ignored=/**
 spring.security.enabled=false
 management.security.enabled=false
 security.basic.enabled=false
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/customer
+spring.datasource.username=root
+spring.datasource.password=marinrd808
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
