--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.security.enabled=false
 management.security.enabled=false
 security.basic.enabled=false
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/customer
 spring.datasource.username=root
-spring.datasource.password=Marinrd808!
+spring.datasource.password=marinrd808
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.sql.init.mode=always
